apps/vagrant/download-pyload/deploy/statefulSet-resources.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pyload
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: pyload
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 256Mi
